# shop-robo

./: README.md
qr_follower/: CMakeLists.txt  package.xml
qr_follower/src/: qr_follower.py
qr_tracker/: CMakeLists.txt  package.xml
qr_tracker/src/: qr_tracker.py
